# PicoPad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  tasks.c  tasks.h  usb_descriptors.c  usb_descriptors.h
Analog/: Analog.c  Analog.h
comms/: i2c.c  i2c.h
config/: config.h  pinout_emergency.h  pinout_final.h  pinout_prototype.h
doc/modes/: All-Button Boxes.md  Analog Box.md  FGC.md  Nunchuk Box.md
lib/analog/: analog.c  analog.h
lib/i2c/: i2c.c  i2c.h
modes/: GenericModeInterface.h
modes/AnalogLever/: NotSmashStick.c  NotSmashStick.h
modes/FGC/: FGC.c  FGC.h
modes/GenericBox/: GenericBox.c  GenericBox.h
modes/Nunchuk/: NunchukBox.c  NunchukBox.h
modes/WASDBox/: WasdBox.c  WasdBox.h
